--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,19 +11,7 @@
 html{
     font-size: 16px;
     font-family: $fontFamily;
-    color: map-get($colores, negro);
+    color: black;
 }
 
 // Clases Tipográficas
-.titulo{
-
-}
-.subtitulo{
-
-}
-.parrafo{
-
-}
-.copy{
-
-}
