--- a/sass/components/_cover.scss
+++ b/sass/components/_cover.scss
@@ -1,18 +1,9 @@
 /* @COVER_BANNER */
 /* ********** */
-
-// img(picture)
 .banner{
-    // mobile first
-    grid-column: 1 / span-1;
-    
-    // ipad
-    @media only screen and (min-width: map-get($breakpoints, ipad)) and (orientation: portrait) {
-        grid-column: 2 / span 6;
-        
-    }
-    // desktop
-    @media only screen and (min-width: map-get($breakpoints, desktop)) {
-        display: none;
-    }
+    width: 100%;
+    border-top-right-radius: 150px;
+
+    @media only screen and (min-width: 1000px)
+    {border-radius: 0px;}
 }
